# pylon

./: .gitignore  README.md  pyproject.toml  pytest.ini
data/: athlete_pos.csv  football.db  formations.json  plays.json  roster.csv  teams.csv
examples/bears_49ers/: README.md  athletes.py  main.py  plays.py  pylon_sim.db  simulation_results.json  simulation_results_old.json  teams.py
examples/bears_49ers/utils/: athletes.py  plays.py  teams.py
examples/models/madden/: personnel.py
pylon/: pyproject.toml
pylon/engine/: athlete.py  clock.py  event.py  game.py  game_state.py  play.py  score.py  situation.py  team.py  timeout.py
pylon/engine/plugins/: base.py  play_outcome.py  play_time.py  play_type.py
pylon/entities/: athlete.py  playbook.py  team.py
pylon/model/core/: event.py  exceptions.py  sim.py
pylon/model/game/: play.py  playbook.py  team.py
scripts/: fetch_espn.py  fetch_madden.py  plays_to_db.py  scrape_playbooks.py
src/pylon/: __init__.py  clock.py  engine.py  guidance.md  rng.py  rule.py  rules.py  scoreboard.py  simulation.py  simulation_runner.py  state.py  timeout.py
src/pylon/db/: __init__.py  database.py  repositories.py  schema.py
src/pylon/domain/: README.md  __init__.py  athlete.py  playbook.py  team.py
src/pylon/engine/: __init__.py  (+11 more)
src/sim/: __init__.py  base.py  exceptions.py  factory.py  observer.py  output.py  rng.py  runner.py
tests/: README.md  test_database.py  test_domain.py  test_domain_rules.py  test_engine.py  test_engines.py  test_game.py  test_integration.py  test_rng.py  test_state.py  test_typed_model.py
(+31 files in other folders)
