[project]
name = "pylon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Davis", email = "daviscotton7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "simpy>=4.1.1",
    "types-requests>=2.32.4.20250913",
]

[project.scripts]
pylon = "pylon:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
